--- a/IdentityTestApp/appsettings.json
+++ b/IdentityTestApp/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApplicationDbContextConnection": "Server=.;Database=IdentityTestApp;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "ApplicationDbContextConnection": "Server=.;Database=IdentityTestApp;Trusted_Connection=True;MultipleActiveResultSets=True",
+    "DefaultConnection": "Server=.;Database=IdentityTestApp;Trusted_Connection=True;MultipleActiveResultSets=True"
   }
 }
